Fix another 404 response property issue
